index.html updated

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,12 +26,6 @@
     <!-- Template Main CSS File -->
     <link href="static/css/style.css" rel="stylesheet">
 
-    <!-- =======================================================
-  * Template Name: YogAit - v4.3.0
-  * Template URL: https://bootstrapmade.com/YogAit-bootstrap-landing-page-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -39,18 +33,17 @@
     <!-- ======= Header ======= -->
     <header id="header" class="header fixed-top d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
-          <div id="logo">
-            <h1><a href="/">Yog<span>Ai</span>t</a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html"><img src="static/img/logo.png" alt="" title="" /></a>-->
-          </div>
-  
-          <nav id="navbar" class="navbar">
-            <ul>
-              <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-              <li>
-                <a class="nav-link scrollto active" href="#learn-section"
-                  >Learn</a
+            <div id="logo">
+                <h1><a href="/">Yog<span>Ai</span>t</a></h1>
+                <!-- Uncomment below if you prefer to use an image logo -->
+                <!-- <a href="index.html"><img src="static/img/logo.png" alt="" title="" /></a>-->
+            </div>
+
+            <nav id="navbar" class="navbar">
+                <ul>
+                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                    <li>
+                        <a class="nav-link scrollto active" href="#learn-section">Learn</a
                 >
               </li>
               <!-- <li>
@@ -64,36 +57,29 @@
                 >
               </li>
               <!-- <li><a class="nav-link scrollto" href="#about-us">About</a></li> -->
-              <!-- <li><a class="nav-link scrollto" href="#features">Features</a></li> -->
-              <!-- <li><a class="nav-link scrollto" href="#screenshots">Screenshots</a></li> -->
-              <li><a class="nav-link scrollto" href="#team">Team</a></li>
-              <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
-              <li><a class="nav-link scrollto" href="/logout">Logout</a></li>
-            </ul>
-            <i class="bi bi-list mobile-nav-toggle"></i>
-          </nav>
-          <!-- .navbar -->
+                    <!-- <li><a class="nav-link scrollto" href="#features">Features</a></li> -->
+                    <!-- <li><a class="nav-link scrollto" href="#screenshots">Screenshots</a></li> -->
+                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
+                    <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
+                    <li><a class="nav-link scrollto" href="/logout">Logout</a></li>
+                </ul>
+                <i class="bi bi-list mobile-nav-toggle"></i>
+            </nav>
+            <!-- .navbar -->
         </div>
-      </header>
-      <!-- End Header -->
-  
-      <!-- ======= Hero Section ======= -->
-      <section id="hero">
+    </header>
+    <!-- End Header -->
+
+    <!-- ======= Hero Section ======= -->
+    <section id="hero">
         <div class="hero-container" data-aos="fade-in">
-          <h1>{% if username: %}{{username}}{% endif %}
-              , Welcome to YogAit</h1>
-          <h2>Yoga is not about perfection. It's about practice!</h2>
-          <!-- <h2>your AI yoga companion &amp; more...</h2> -->
-          <img
-            src="static/img/YogAit-main.png"
-            alt="Hero Imgs"
-            data-aos="zoom-out"
-            data-aos-delay="100"
-            style="width: 45%"
-          />
-          <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+            <h1>{% if username: %}{{username}}{% endif %} , Welcome to YogAit</h1>
+            <h2>Yoga is not about perfection. It's about practice!</h2>
+            <!-- <h2>your AI yoga companion &amp; more...</h2> -->
+            <img src="static/img/YogAit-main.png" alt="Hero Imgs" data-aos="zoom-out" data-aos-delay="100" style="width: 45%" />
+            <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
         </div>
-      </section>
+    </section>
     <!-- ======= Footer ======= -->
     <footer class="footer ">
         <div class="container ">
