--- a/templates/signin.html
+++ b/templates/signin.html
@@ -2,94 +2,90 @@
 <html lang="en">
 
 <head>
-  <title>Login with mongodb flask</title>
+    <title>Login with mongodb flask</title>
 
-  <link id="pagestyle" href="/static/css/soft-ui-dashboard.css?v=1.0.0" rel="stylesheet" />
+    <link id="pagestyle" href="/static/css/soft-ui-dashboard.css?v=1.0.0" rel="stylesheet" />
 </head>
 
 <body>
-  <style>
-    /* HIDE RADIO */
+    <style>
+        /* HIDE RADIO */
+        
+        [type=radio] {
+            position: absolute;
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+        /* IMAGE STYLES */
+        
+        [type=radio]+img {
+            cursor: pointer;
+        }
+        /* CHECKED STYLES */
+        
+        [type=radio]:checked+img {
+            outline: 2px solid #71F7AF;
+        }
+    </style>
 
-    [type=radio] {
-      position: absolute;
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
+    <section>
+        <div class="page-header section-height-75">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
+                        <div class="card card-plain mt-8">
+                            <div class="card-header pb-0 text-left bg-transparent">
+                                <h4 class="text-info text-gradient">
+                                    YogAIt - Login
+                                </h4>
+                                <p class="mb-0">
+                                    {% if get_flashed_messages() %} {{ get_flashed_messages()[0] }} {% else %} Add your credentials {% endif %}
 
-    /* IMAGE STYLES */
-
-    [type=radio]+img {
-      cursor: pointer;
-    }
-
-    /* CHECKED STYLES */
-
-    [type=radio]:checked+img {
-      outline: 2px solid #71F7AF;
-    }
-  </style>
-
-  <section>
-    <div class="page-header section-height-75">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
-            <div class="card card-plain mt-8">
-              <div class="card-header pb-0 text-left bg-transparent">
-                <h4 class="text-info text-gradient">
-                  YogAIt - Login
-                </h4>
-                <p class="mb-0">
-                  {% if get_flashed_messages() %} {{ get_flashed_messages()[0] }} {% else %} Add your credentials {% endif %}
-                  
-                </p>
-              </div>
-              <div class="card-body">
-                <form role="form text-left" method="post" action="/signin">
+                                </p>
+                            </div>
+                            <div class="card-body">
+                                <form role="form text-left" method="post" action="/signin">
 
 
-                  <label>Username</label>
-                  <div class="mb-3">
-                    <input type="name" name="username" id="inputName" class="form-control" placeholder="Username"
-                      required autofocus>
-                  </div>
-                  <label>Password</label>
-                  <div class="mb-3">
-                    <input type="password" name="password" id="inputPassword" class="form-control"
-                      placeholder="Password" required>
-                  </div>
-                  <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
-                    <label class="form-check-label" for="rememberMe">Remember me</label>
-                  </div>
-                  <div class="text-center">
-                    <button type="submit" name="login" class="btn bg-gradient-info w-100 mt-4 mb-0">Sign in</button>
-                  </div>
-                </form>
-              </div>
-              <div class="card-footer text-center pt-0 px-lg-2 px-1">
-                <p class="mb-4 text-sm mx-auto">
-                  Don't have an account?
-                  <a href="{{ url_for('signup') }}" class="text-info text-gradient font-weight-bold">Sign
+                                    <label>Username</label>
+                                    <div class="mb-3">
+                                        <input type="name" name="username" id="inputName" class="form-control" placeholder="Username" required autofocus>
+                                    </div>
+                                    <label>Password</label>
+                                    <div class="mb-3">
+                                        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                                    </div>
+
+                                    <div class="form-check form-switch">
+                                        <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
+                                        <label class="form-check-label" for="rememberMe">Remember me</label>
+                                    </div>
+                                    <div class="text-center">
+                                        <button type="submit" name="login" class="btn bg-gradient-info w-100 mt-4 mb-0">Sign in</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="card-footer text-center pt-0 px-lg-2 px-1">
+                                <p class="mb-4 text-sm mx-auto">
+                                    Don't have an account?
+                                    <a href="{{ url_for('signup') }}" class="text-info text-gradient font-weight-bold">Sign
                     UP</a>
-                </p>
-              </div>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="oblique position-absolute top-0 h-100 d-md-block d-none me-n8">
+                            <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url('/static/img/curved-images/curved14.jpg')"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="col-md-6">
-            <div class="oblique position-absolute top-0 h-100 d-md-block d-none me-n8">
-              <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6"
-                style="background-image:url('/static/img/curved-images/curved14.jpg')"></div>
-            </div>
-          </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- <div class="container">
+    <!-- <div class="container">
   <div class="header">
     <nav>
       <ul class="nav nav-pills pull-right">
