asanas grid in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,14 +52,10 @@
                 >
               </li> -->
               <li>
-                <a class="nav-link scrollto active" href="#meditate-section"
-                  >meditate</a
-                >
               </li>
               <!-- <li><a class="nav-link scrollto" href="#about-us">About</a></li> -->
                     <!-- <li><a class="nav-link scrollto" href="#features">Features</a></li> -->
                     <!-- <li><a class="nav-link scrollto" href="#screenshots">Screenshots</a></li> -->
-                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
                     <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
                     <li><a class="nav-link scrollto" href="/logout">Logout</a></li>
                 </ul>
@@ -80,6 +76,276 @@
             <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
         </div>
     </section>
+    <section id="learn-section" class="padd-section text-center">
+
+        <div class="container" data-aos="fade-up">
+            <div class="section-title text-center">
+                <h2>Yoga Asañas | Learn</h2>
+                <p class="separator">Learning is the new begining...</p>
+            </div>
+
+            <div class="row" data-aos="fade-up" data-aos-delay="100">
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="feature-block">
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                                <div class="flip-card-front">
+                                    <img src="{{url_for('static', filename='img/yoga_poses/vajrasana.jpg')}}" style="width:300px;height:300px;">
+                                </div>
+                                <div class="flip-card-back">
+                                    <span style="font-size: 20px; margin-top: 50px; padding-top: 10px;">
+                                        Benefits: Body alignment is improved thanks to this pose.
+                                    </span>
+                                    <div>
+                                        <a href="/" class="yoga-get-started">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 style="color: #fff;">creative design</h4>
+                        <p style="color: #fff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div>
+
+                <div class=" col-md-6 col-lg-3 ">
+                    <div class="feature-block ">
+                        <div class="flip-card ">
+                            <div class="flip-card-inner ">
+                                <div class="flip-card-front ">
+                                    <img src="{{url_for( 'static', filename='img/yoga_poses/bhujangasana.jpg' )}} " style="width:300px;height:300px; ">
+                                </div>
+                                <div class="flip-card-back ">
+                                    <span style="font-size: 20px; ">Benefits: This pose is therapeutic for asthma.</span>
+                                    <div>
+                                        <a href="/" class="yoga-get-started">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 style="color: #fff;">Retina Ready</h4>
+                        <p style="color: #fff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 ">
+                    <div class="feature-block ">
+                        <div class="flip-card ">
+                            <div class="flip-card-inner ">
+                                <div class="flip-card-front ">
+                                    <img src="{{url_for( 'static', filename='img/yoga_poses/matsyasana.jpg' )}} " style="width:300px;height:300px; ">
+                                </div>
+                                <div class="flip-card-back ">
+                                    <span style="font-size: 20px; ">Benefits: This pose strengths muscles.</span>
+                                    <div>
+                                        <a href="/" class="yoga-get-started">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 style="color: #fff;">easy to use</h4>
+                        <p style="color: #fff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 ">
+                    <div class="feature-block ">
+                        <div class="flip-card ">
+                            <div class="flip-card-inner ">
+                                <div class="flip-card-front ">
+                                    <img src="{{url_for( 'static', filename='img/yoga_poses/pashchimottanasana.jpg' )}} " style="width:300px;height:300px; ">
+                                </div>
+                                <div class="flip-card-back ">
+                                    <span style="font-size: 20px; ">Benefits: This pose helps with relieving the symptoms of menopause and menstrual discomfort.</span>
+                                    <div>
+                                        <a href="/" class="yoga-get-started">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 style="color: #fff;">Free Updates</h4>
+                        <p style="color: #fff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 ">
+                    <div class="feature-block ">
+                        <div class="flip-card ">
+                            <div class="flip-card-inner ">
+                                <div class="flip-card-front ">
+                                    <img src="{{url_for( 'static', filename='img/yoga_poses/vajrasana.jpg' )}} " style="width:300px;height:300px; ">
+                                </div>
+                                <div class="flip-card-back ">
+                                    <span style="font-size: 20px; ">
+                                        Benefits: This pose helps regulate blood circulation </span>
+                                    <div>
+                                        <a href="/" class="yoga-get-started">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 style="color: #fff;">Free Updates</h4>
+                        <p style="color: #fff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 ">
+                    <div class="feature-block ">
+                        <div class="flip-card ">
+                            <div class="flip-card-inner ">
+                                <div class="flip-card-front ">
+                                    <img src="{{url_for( 'static', filename='img/yoga_poses/pavanmuktasana.jpg' )}} " style="width:300px;height:300px; ">
+                                </div>
+                                <div class="flip-card-back ">
+                                    <span style="font-size: 20px; ">Benefits: This pose improves your digestive system.</span>
+                                    <div>
+                                        <a href="/" class="yoga-get-started">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 style="color: #fff;">App store support</h4>
+                        <p style="color: #fff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 ">
+                    <div class="feature-block ">
+                        <div class="flip-card ">
+                            <div class="flip-card-inner ">
+                                <div class="flip-card-front ">
+                                    <img src="{{url_for( 'static', filename='img/yoga_poses/trikonasana.jpg' )}} " style="width:300px;height:300px; ">
+                                </div>
+                                <div class="flip-card-back ">
+                                    <span style="font-size: 20px; ">Benefits: This pose stimulates function of reducing stress.</span>
+                                    <div>
+                                        <a href="/" class="yoga-get-started">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 style="color: #fff;">Perfect Pixel</h4>
+                        <p style="color: #fff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 ">
+                    <div class="feature-block ">
+                        <div class="flip-card ">
+                            <div class="flip-card-inner ">
+                                <div class="flip-card-front ">
+                                    <img src="{{url_for( 'static', filename='img/yoga_poses/shavasana.jpg' )}} " style="width:300px;height:300px; ">
+                                </div>
+                                <div class="flip-card-back ">
+                                    <span style="font-size: 20px; ">Benefits: This pose is an important one for
+                                        reducing anxiety.</span>
+                                    <div>
+                                        <a href="/" class="yoga-get-started">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 style="color: #fff;">clean codes</h4>
+                        <p style="color: #fff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 ">
+                    <div class="feature-block ">
+                        <div class="flip-card ">
+                            <div class="flip-card-inner ">
+                                <div class="flip-card-front ">
+                                    <img src="{{url_for( 'static', filename='img/yoga_poses/utkatasana.jpg' )}} " style="width:300px;height:300px; ">
+                                </div>
+                                <div class="flip-card-back ">
+                                    <span style="font-size: 20px; ">Benefits: This one stimulates the heart,
+                                        diaphragm, and abdominal organs.</span>
+                                    <div>
+                                        <a href="/" class="yoga-get-started">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 style="color: #fff;">Perfect Pixel</h4>
+                        <p style="color: #fff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 ">
+                    <div class="feature-block ">
+                        <div class="flip-card ">
+                            <div class="flip-card-inner ">
+                                <div class="flip-card-front ">
+                                    <img src="{{url_for( 'static', filename='img/yoga_poses/uttanasana.jpg' )}} " style="width:300px;height:300px; ">
+                                </div>
+                                <div class="flip-card-back ">
+                                    <span style="font-size: 20px; ">Benefits: This pose helps strengthen your body
+                                        and aids in digestion.</span>
+                                    <div>
+                                        <a href="/" class="yoga-get-started">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 style="color: #fff;">Perfect Pixel</h4>
+                        <p style="color: #fff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 ">
+                    <div class="feature-block ">
+                        <div class="flip-card ">
+                            <div class="flip-card-inner ">
+                                <div class="flip-card-front ">
+                                    <img src="{{url_for( 'static', filename='img/yoga_poses/balasana.jpg' )}} " style="width:300px;height:300px; ">
+                                </div>
+                                <div class="flip-card-back ">
+                                    <span style="font-size: 20px; ">Benefits: This one stimulates the heart,
+                                        diaphragm, and abdominal organs.</span>
+                                    <div>
+                                        <a href="/" class="yoga-get-started">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 style="color: #fff;">Perfect Pixel</h4>
+                        <p style="color: #fff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 ">
+                    <div class="feature-block ">
+                        <div class="flip-card ">
+                            <div class="flip-card-inner ">
+                                <div class="flip-card-front ">
+                                    <img src="{{url_for( 'static', filename='img/yoga_poses/ardha-matsyendrasana.jpg' )}} " style="width:300px;height:300px; ">
+                                </div>
+                                <div class="flip-card-back ">
+                                    <span style="font-size: 20px; ">Benefits: This pose helps strengthen your body
+                                        and aids in digestion.</span>
+                                    <div>
+                                        <a href="/" class="yoga-get-started">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 style="color: #fff;">Perfect Pixel</h4>
+                        <p style="color: #fff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div>
+
+                <!-- Extra template -->
+                <!-- <div class="col-md-6 col-lg-3 ">
+                    <div class="feature-block ">
+                        <img src="static/img/svg/pixel.svg " alt="img ">
+                        <h4>Perfect Pixel</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    </div>
+                </div> -->
+
+            </div>
+        </div>
+    </section>
     <!-- ======= Footer ======= -->
     <footer class="footer ">
         <div class="container ">
@@ -97,7 +363,7 @@
                 <div class="col-sm-6 col-md-3 col-lg-2 ">
                     <div class="list-menu ">
 
-                        <h4>Abou Us</h4>
+                        <h4>About Us</h4>
 
                         <ul class="list-unstyled ">
                             <li><a href="# ">About us</a></li>
