--- a/templates/signup.html
+++ b/templates/signup.html
@@ -61,7 +61,7 @@
 
                                     <label>Username</label>
                                     <div class="mb-3">
-                                        <input type="name" name="username" id="inputName" class="form-control" placeholder="Username" required autofocus>
+                                        <input type="name" name="username" id="inputName" class="form-control" placeholder="Username" minlength="4" maxlength="20" required autofocus>
                                     </div>
 
                                     <label>Email</label>
@@ -83,8 +83,25 @@
                                       </select>
                                     </div>
 
+                                    <label>Height</label>
+                                    <div class="mb-3">
+                                        <input type="number" name="height" id="inputHeight" class="form-control" placeholder="height (in cm)" required>
+                                    </div>
 
-                                    <div class="form-check form-switch">
+                                    <label>Weight</label>
+                                    <div class="mb-3">
+                                        <input type="number" name="weight" id="inputWeight" class="form-control" placeholder="weight (in kg)" required>
+                                    </div>
+
+                                    <label>Birth date:</label>
+                                    <div class="mb-3">
+                                        <input type="date" id="birthdate" name="birthdate" id="inputbirthdate" class="form-control" required>
+                                    </div>
+
+
+
+
+                                    <div class="form-cweck form-switch">
                                         <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
                                         <label class="form-check-label" for="rememberMe">Terms</label>
                                     </div>
