--- a/templates/signin.html
+++ b/templates/signin.html
@@ -37,7 +37,7 @@
                         <div class="card card-plain mt-8">
                             <div class="card-header pb-0 text-left bg-transparent">
                                 <h4 class="text-info text-gradient">
-                                    YogAIt - Login
+                                    Yog-Ai-t - Login
                                 </h4>
                                 <p class="mb-0">
                                     {% if get_flashed_messages() %} {{ get_flashed_messages()[0] }} {% else %} Add your credentials {% endif %}
